force-app/main/default/objects/Lead_Assigned__e/Lead_Assigned__e.object-meta.xml
<CustomObject>
    <label>Lead_Assigned</label>
    <pluralLabel>Lead_Assigned</pluralLabel>
</CustomObject>