force-app/main/default/objects/Lead_Assigned__e/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <label>LeadId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>