force-app/main/default/objects/Lead_Assigned__e/fields/LeadName__c.field-meta.xml
<CustomField>
    <fullName>LeadName__c</fullName>
    <label>LeadName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>